Make the image a background image and fix sizes so it doesn't stretch

--- a/app/assets/stylesheets/redesign/components/content_card.sass
+++ b/app/assets/stylesheets/redesign/components/content_card.sass
@@ -3,11 +3,14 @@
 .ContentCard
   height: 100%
 
-.ContentCard-img
+.ContentCard-image
   height: 152px
   width: 100%
   border-bottom-style: solid
   border-bottom-width: 6px
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
 .ContentCard-header
   margin-top: 25px
@@ -36,7 +39,7 @@
     margin-top: 30px
   .ContentCard-description
     margin-top: 30px
-  .ContentCard-img
+  .ContentCard-image
     height: 295px
   .ContentCard-button
     margin-top: 50px
